add more info in index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Frontend Interview Preparation</title>
 	</head>
 	<body style="font-family: sans-serif">
+		<a href="https://github.com/jsun969/frontend-interview-prep">GitHub Repo</a>
 		<h1>Frontend Interview Preparation</h1>
 		<ul>
 			<li><a href="/countdown-timer">Countdown Timer</a></li>
@@ -14,5 +15,10 @@
 			<li><a href="/basic-calculator">Basic Calculator</a></li>
 			<li><a href="/snake-game">Snake Game</a></li>
 		</ul>
+		<p>
+			By Justin Sun
+			<a href="https://github.com/jsun969">GitHub</a> |
+			<a href="https://linkedin.com/in/jsun969">LinkedIn</a>
+		</p>
 	</body>
 </html>
