--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<li><a href="/digital-clock">Digital Clock</a></li>
 			<li><a href="/basic-calculator">Basic Calculator</a></li>
 			<li><a href="/snake-game">Snake Game</a></li>
+			<li><a href="/wall-clock">Wall Clock</a></li>
 		</ul>
 		<p>
 			By Justin Sun
